correctly aligning the comment link

--- a/css/liferea2.css
+++ b/css/liferea2.css
@@ -116,10 +116,6 @@ div.content, div.foottext {
 	padding:0px 6px 0px 12px;
 }
 
-.commentlink {
-	padding-left:4px;
-}
-
 img {
 	margin:2px;
 }
